Drop sorting and deduplication of media queries. https://bugs.webkit.org/show_bug.cgi?id=217751

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/cssom/mediaquery-sort-dedup-expected.txt: annotate progression

Source/WebCore:

This matches what Gecko has shipped for ages.

The spec used to contain the sorting but not the de-duplication.

Both the spec and Chromium have been updated to match Gecko, see
https://github.com/w3c/csswg-drafts/issues/5627

* css/MediaQuery.cpp:
(WebCore::MediaQuery::MediaQuery): Don't sort / dedup

Tests: imported/w3c/web-platform-tests/css/cssom/mediaquery-sort-dedup.html

LayoutTests:

* fast/media/media-query-serialization.html: Adjust to match spec.


Canonical link: https://commits.webkit.org/230870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268966 268f45cc-cd09-0410-ab3c-d52691b4dbfc